@@ -1,4 +1,4 @@
-<addon id="plugin.video.venom" name="[COLOR red]Venom[/COLOR]" provider-name="Venom" version="4.1.2">
+<addon id="plugin.video.venom" name="[COLOR red]Venom[/COLOR]" provider-name="Venom" version="4.1.3">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="script.module.requests" version="2.19.1" />
@@ -33,9 +33,14 @@
 			<screenshot>resources/screenshots/screenshot003.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v4.1.2 – Sept. 05, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Fixed hosters not displayed from previous update.  Hoster
-    support may be removed is the near future.[/I]
+[B][COLOR red]Update - v4.1.3 – Sept. 09, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fix for missing context menu option "Download" when
+    selection is free or premium hoster source.[/I]
+[COLOR yellow]--[/COLOR][I] Context menu option to cache uncached torrents was also
+    showing for free hosters...this is fixed.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed incorrect path in control module.[/I]
+[COLOR yellow]--[/COLOR][I] I'm updating the News-Info file so please have a read of that.
+    The Next official release of Venom free hoster support is being removed.[/I]
 		</news>
 	</extension>
 </addon>
