@@ -1,3 +1,11 @@
+[B][COLOR red]Update - v4.1.3 – Sept. 09, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fix for missing context menu option "Download" when
+    selection is free or premium hoster source.[/I]
+[COLOR yellow]--[/COLOR][I] Context menu option to cache uncached torrents was also
+    showing for free hosters...this is fixed.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed incorrect path in control module.[/I]
+[COLOR yellow]--[/COLOR][I] I'm updating the News-Info file so please have a read of that.
+
 [B][COLOR red]Update - v4.1.2 – Sept. 05, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Fixed hosters not displayed from previous update.  Hoster
     support may be removed is the near future.[/I]
